    entity attributes to be incorrect.  Related
    to [ticket:1892] as this was supposed
    to be part of that, this is [ticket:2491].

  - [feature] The 'objects' argument to 
    flush() is no longer deprecated, as some
    valid use cases have been identified.  

  - [bug] Fixed identity_key() function which 
    was not accepting a scalar argument 
    for the identity.  [ticket:2508].

- sql
  - [bug] added BIGINT to types.__all__,
    BIGINT, BINARY, VARBINARY to sqlalchemy
    module namespace, plus test to ensure
    this breakage doesn't occur again.
    [ticket:2499]

  - [bug] Repaired common table expression
    rendering to function correctly when the 
    SELECT statement contains UNION or other
    compound expressions, courtesy btbuilder.  
    [ticket:2490]

- engine
  - [bug] Fixed memory leak in C version of
    result proxy whereby DBAPIs which don't deliver
    pure Python tuples for result rows would
    fail to decrement refcounts correctly.
    The most prominently affected DBAPI
    is pyodbc.  [ticket:2489]

  - [bug] Fixed bug affecting Py3K whereby
    string positional parameters passed to 
    engine/connection execute() would fail to be
    interpreted correctly, due to __iter__
    being present on Py3K string.  
    [ticket:2503].

- oracle
  - [bug] Added ROWID to oracle.*, [ticket:2483]

- mysql
  - [feature] Added a new dialect for Google App
    Engine.  Courtesy Richie Foreman. [ticket:2484]


0.7.7
=====
- orm
  - [bug] Fixed issue in unit of work
    whereby setting a non-None self-referential
    many-to-one relationship to None
    would fail to persist the change if the
    former value was not already loaded.
    [ticket:2477].

  - [feature] Added prefix_with() method
    to Query, calls upon select().prefix_with()
    to allow placement of MySQL SELECT
    directives in statements.  Courtesy
    Diana Clarke [ticket:2443]

  - [bug] Fixed bug in 0.7.6 introduced by 
    [ticket:2409] whereby column_mapped_collection